--- a/freeCode Camp Projects/Project 7 - Photo Gallery/styles.css
+++ b/freeCode Camp Projects/Project 7 - Photo Gallery/styles.css
@@ -2,6 +2,12 @@
     box-sizing: border-box;
 }
 
+body {
+    margin: none;
+    font-family: sans-serif;
+    background-color: #f5f6f7;
+}
+
 /*
 .gallery {
     width: 50%;
@@ -14,6 +20,8 @@ img {
     border: 5px solid blue;
 }
 */
+
+
 
 .gallery img {
     width: 100%;
