--- a/freeCode Camp Projects/Project 7 - Photo Gallery/styles.css
+++ b/freeCode Camp Projects/Project 7 - Photo Gallery/styles.css
@@ -8,6 +8,15 @@ body {
     background-color: #f5f6f7;
 }
 
+.header {
+    text-align: center;
+    text-transform: uppercase;
+    padding: 32px;
+    background: #0a0a23;
+    color: #fff;
+    border-bottom: 4px solid #fdb347;
+}
+
 /*
 .gallery {
     width: 50%;
@@ -20,8 +29,6 @@ img {
     border: 5px solid blue;
 }
 */
-
-
 
 .gallery img {
     width: 100%;
