--- a/freeCode Camp Projects/Project 7 - Photo Gallery/styles.css
+++ b/freeCode Camp Projects/Project 7 - Photo Gallery/styles.css
@@ -39,6 +39,7 @@ img {
     padding: 20px 10px;
     max-width: 1400px;
     margin: 0 auto;
+    gap: 16px;
   }
 
 .gallery img {
@@ -46,4 +47,5 @@ img {
     max-width: 350px;
     height: 300px;
     object-fit: cover;
+    border-radius: 10px;
 }
