--- a/freeCode Camp Projects/Project 8 - Nutrition Label/styles.css
+++ b/freeCode Camp Projects/Project 8 - Nutrition Label/styles.css
@@ -47,6 +47,10 @@ p {
     border: 0;
 }
 
+.medium {
+    height: 5px;
+}
+
 .small-text {
     font-size: 0.85rem;
 }
@@ -71,4 +75,16 @@ p {
     margin: -5px -2px;
     font-size: 2em;
     font-weight: 700;
+}
+
+.right {
+    justify-content: flex-end;
+}
+
+.indent {
+    margin-left: 1em;
+}
+
+.daily-value p:not(.no-divider) {
+    border-bottom: 1px solid #888989;
 }
