--- a/freeCode Camp Projects/Project 9 - Quiz/styles.css
+++ b/freeCode Camp Projects/Project 9 - Quiz/styles.css
@@ -35,6 +35,24 @@ nav > ul {
     justify-content: space-evenly;
 }
 
+nav > ul > li {
+    color: #dfdfe2;
+    margin: 0 0.2rem;
+    padding: 0.2rem;
+    display: block;
+}
+
+nav > ul > li:hover {
+    background-color: #dfdfe2;
+    color: #1b1b32;
+    cursor: pointer;
+}
+
+li > a {
+    color: inherit;
+    text-decoration: none;
+}
+
 h1, h2 {
     font-family: "Verdana", sans-serif;
 }
