--- a/freeCode Camp Projects/Project 9 - Quiz/styles.css
+++ b/freeCode Camp Projects/Project 9 - Quiz/styles.css
@@ -1,3 +1,9 @@
+@media (prefers-reduced-motion: no-preference) {
+    * {
+        scroll-behavior: smooth;
+    }
+}
+
 body {
     background: #f5f6f7;
     color: #1b1b32;
@@ -27,10 +33,6 @@ h1 {
     color: #f1be32;
     font-size: min(5vw, 1.2em);
     text-align: center;
-}
-
-main {
-    padding-top: 25px;
 }
 
 nav {
@@ -67,16 +69,108 @@ li > a {
     text-decoration: none;
 }
 
+main {
+    padding-top: 25px;
+}
+
+section {
+    width: 80%;
+    margin: 0 auto 10px;
+    max-width: 600px;
+}
+
 h1, h2 {
     font-family: "Verdana", sans-serif;
 }
 
 h2 {
     border-bottom: 4px solid #dfdfe2;
+    margin-top: 0;
+    padding-top: 60px;
+}
+
+.info {
+    padding: 10px 0 0 5px;
+}
+
+.formrow {
+    margin-top: 30px;
+    padding: 0 15px;
+}
+
+input {
+    font-size: 16px;
+}
+
+label {
+    text-align: right;
+}
+
+.info input, .info label {
+    display: inline-block;
+}
+
+.info input {
+    width: 50%;
+    text-align: left;
+}
+
+.info label {
+    width: 10%;
+    min-width: 55px;
+}
+
+.question-block {
+    text-align: left;
+    display: block;
+    width: 100%;
+    margin-top: 20px;
+    padding-top: 5px;
+}
+
+p {
+    margin-top: 5px;
+    padding-left: 15px;
+    font-size: 20px;
 }
 
 p::before {
     content: "Question #";
+}
+
+.question {
+    border: none;
+    padding-bottom: 0;
+}
+
+.answers-list {
+    list-style: none;
+    padding: 0;
+}
+
+button {
+    display: block;
+    margin: 40px auto;
+    width: 40%;
+    padding: 15px;
+    font-size: 23px;
+    background: #d0d0d5;
+    border: 3px solid #3b3b4f;
+}
+
+footer {
+    background-color: #2a2a40;
+    display: flex;
+    justify-content: center;
+}
+
+footer, footer a {
+    color: #dfdfe2;
+}
+
+address {
+    text-align: center;
+    padding: 0.3em;
 }
 
 .sr-only {
