--- a/freeCode Camp Projects/Project 12 - Cat Painting/styles.css
+++ b/freeCode Camp Projects/Project 12 - Cat Painting/styles.css
@@ -20,3 +20,14 @@ body {
     border-radius: 46%;
 }
 
+.cat-left-ear {
+    position: absolute;
+    top: -26px;
+    left: -31px;
+    border-top-left-radius: 90px;
+    border-top-right-radius: 10px;
+    transform: rotate(-45deg);
+    border-left: 35px solid transparent;
+    border-right: 35px solid transparent;
+    border-bottom: 70px solid #5e5e5e;
+}
