--- a/freeCode Camp Projects/Project 15 - City Skyline/styles.css
+++ b/freeCode Camp Projects/Project 15 - City Skyline/styles.css
@@ -29,14 +29,17 @@ body {
     justify-content: space-evenly;
 }
 
+.building-wrap {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 /* BACKGROUND BUILDINGS - "bb" stands for "background building" */
 
 .bb1 {
     width: 10%;
     height: 70%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
 }
 
 .bb1-window {
@@ -104,6 +107,23 @@ body {
 .bb4 {
     width: 11%;
     height: 58%;
+}
+
+.bb4a {
+    width: 3%;
+    height: 10%;
+    background-color: var(--building-color4);
+}
+
+.bb4b {
+    width: 80%;
+    height: 5%;
+    background-color: var(--building-color4);
+}
+
+.bb4c {
+    width: 100%;
+    height: 85%;
     background-color: var(--building-color4);
 }
 
