--- a/freeCode Camp Projects/Project 15 - City Skyline/styles.css
+++ b/freeCode Camp Projects/Project 15 - City Skyline/styles.css
@@ -6,6 +6,7 @@
     --window-color1: black;
     --window-color2: #8cd9b3;
     --window-color3: #d98cb3;
+    --window-color4: #8cb3d9;
 }
 
 * {
@@ -107,6 +108,12 @@ body {
 .bb4 {
     width: 11%;
     height: 58%;
+}
+
+.bb4-window {
+    width: 18%;
+    height: 90%;
+    background-color: var(--window-color4);
 }
 
 .bb4a {
