--- a/freeCode Camp Projects/Project 15 - City Skyline/styles.css
+++ b/freeCode Camp Projects/Project 15 - City Skyline/styles.css
@@ -10,7 +10,6 @@
 }
 
 * {
-    border: 1px solid black;
     box-sizing: border-box;
 }
 
@@ -40,6 +39,16 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-evenly;
+}
+
+.sky {
+    background: radial-gradient(
+        circle closest-corner at 15% 15%,
+        #ffcf33 0%,
+        #ffcf33 20%,
+        #ffff66 21%,
+        #bbeeff 100%
+    );
 }
 
 /* BACKGROUND BUILDINGS - "bb" stands for "background building" */
