--- a/freeCode Camp Projects/Project 5 - Survey Form/styles/styles.css
+++ b/freeCode Camp Projects/Project 5 - Survey Form/styles/styles.css
@@ -1,11 +1,3 @@
-/*
---text: #ffffff;
---background: #212121;
---primary: #31b1d8;
---secondary: #020024;
---accent: #0057c2;
-*/
-
 body {
     background-color: #202020;
     color: #FFFFFF;
@@ -39,16 +31,18 @@ hr {
 
 form {
     display: block;
-    max-width: 75%;
     padding: 2.5rem 0.625rem;
     border-radius: 0.25rem;
+    max-width: 800px;
+    margin: auto;
 }
 
-h3 {
+.section-header {
     font-size: 20px;
     background: rgb(49,177,216);
     background: linear-gradient(90deg, rgba(49,177,216,1) 25%, rgba(0,87,194,1) 75%);
     border-radius: 5px;
+    max-width: 800px;
 }
 
 label {
@@ -72,10 +66,6 @@ label {
     margin: 0 1rem;
 }
 
-.form-group {
-    
-}
-
 .basic-information {
     padding: 0 15px;
 }
@@ -83,6 +73,20 @@ label {
 .basic-information label {
     display: block;
     padding: 15px;
+}
+
+.newsletter {
+    padding: 0 30px;
+}
+
+select, textarea {
+    font-family: 'Poppins', sans-serif;
+    color: black;
+}
+
+textarea {
+    height: 100px;
+    width: 500px;
 }
 
 button {
@@ -95,4 +99,16 @@ button {
     background: linear-gradient(90deg, rgba(49,177,216,1) 25%, rgba(0,87,194,1) 75%);
     border: 0.5px solid rgb(151, 145, 136);
     border-radius: 5px;
+}
+
+@media (min-width: 1100px) {
+    .description {
+        width: 750px;
+        margin: auto;
+        margin-bottom: 20px;
+    }
+
+    hr {
+        width: 740px;
+    }
 }
