--- a/freeCode Camp Projects/Project 14 - Technical Documentation Page/styles/styles.css
+++ b/freeCode Camp Projects/Project 14 - Technical Documentation Page/styles/styles.css
@@ -6,7 +6,7 @@ html {
 
 #navbar {
     position: fixed;
-    top: 0;
+    top: 10px;
     left: 0;
     z-index: 1;
     width: 300px;
@@ -15,13 +15,22 @@ html {
 }
 
 #navbar header {
-    font-size: 45px;
+    font-size: 35px;
     font-weight: 700;
     text-align: center;
 }
 
 #navbar ul {
     list-style-type: none;
+}
+
+#navbar li {
+    margin: 15px 0;
+    font-size: 18px;
+}
+
+#navbar li:first-child {
+    margin-top: 25px;
 }
 
 #navbar a:link {
@@ -39,7 +48,7 @@ html {
 
 #main-doc {
     position: absolute;
-    top: 0;
+    top: 10px;
     margin-left: 300px;
 }
 
@@ -48,8 +57,34 @@ section header {
     font-weight: bold;
 }
 
+section p, li {
+    font-size: 18px;
+    text-indent: 30px;
+    line-height: 1.3;
+}
+
 section {
-    padding-bottom: 50px;
+    padding-bottom: 30px;
+    margin-right: 15px;
+}
+
+code {
+    display: block;
+    text-align: left;
+    white-space: pre-line;
+    position: relative;
+    word-break: normal;
+    word-wrap: normal;
+    line-height: 2;
+    background-color: black;
+    padding: 15px;
+    margin: 10px;
+    border-radius: 5px;
+    font-family: 'JetBrains Mono', monospace;
+}
+
+.top {
+    display: none;
 }
 
 @media (max-width: 815px) {
@@ -59,14 +94,52 @@ section {
         left: 0;
         width: 100%;
         max-height: 275px;
-        margin: -180px 0;
         padding: 0;
         z-index: 1;
     }
 
+    #navbar li {
+        margin-left: 0;
+    }
+
     #main-doc {
         position: relative;
-        margin-top: 200px;
         margin-left: 15px;
+    }
+
+    .content {
+        padding-top: 300px;
+    }
+
+    code {
+        display: block;
+        text-align: left;
+        white-space: pre-line;
+        position: relative;
+        word-break: normal;
+        word-wrap: normal;
+        line-height: 2;
+        background-color: black;
+        padding: 15px;
+        margin: 15px;
+        border-radius: 5px;
+        font-family: 'JetBrains Mono', monospace;
+    }
+
+    .top {
+        display: inline-block;
+        position: sticky;
+        bottom: 20px;
+        left: 650px;
+        --offset: 50px;
+        margin-top: calc(100vh + var(--offset)); 
+        
+        /* visual styling */
+        text-decoration: none;
+        padding: 10px;
+        color: #fff;
+        background: #000;
+        border-radius: 100px;
+        white-space: nowrap;
     }
 }
