--- a/freeCode Camp Projects/Project 20 - Portfolio Website/styles/styles.css
+++ b/freeCode Camp Projects/Project 20 - Portfolio Website/styles/styles.css
@@ -77,7 +77,7 @@ html {
     display: block;
     color: azure;
     text-decoration: none;
-    padding: 20px;
+    padding: 20px 15px;
 }
 
 #navbar a:visited, a:active {
@@ -86,11 +86,12 @@ html {
 
 /* Projects */
 
-#projects {
+/* #projects {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    text-align: center;
     width: 100%;
     height: 100vh;
     background-color: rgb(42, 90, 179);
@@ -109,6 +110,114 @@ html {
 
 #projects a:visited, a:active {
     color: azure;
+} */
+
+#projects {
+    background-color: rgb(42, 90, 179);
+    width: 100%;
+    height: 100vh;
+}
+
+.project-content {
+    padding: 5rem 1.5rem 4rem;
+    min-height: calc(100vh - 40px);
+    background-color: rgb(42, 90, 179);
+    display: flex;
+    align-items: center;
+    text-align: center;
+    justify-content: space-evenly;
+    flex-direction: column;
+    gap: 3rem;
+}
+
+#projects h2 {
+    font-size: 30px;
+    font-weight: 700;
+    color: azure;
+    text-align: center;
+    padding-top: 25px;
+}
+
+#tile-container {
+    width: 100%;
+    max-width: 1200px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 1.5rem 1rem;
+}
+
+.project-tile {
+    cursor: pointer;
+    display: flex;
+    flex-direction: column;
+    transition: transform .5s;
+}
+
+.project-tile:hover {
+    transform: translateY(-5px);
+}
+
+.project-tile img {
+    -o-object-fit: cover;
+       object-fit: cover;
+    width: 100%;
+    border-radius: 10px;
+}
+
+.project-tile a {
+    display: block;
+    color: azure;
+    text-decoration: none;
+    max-width: 350px;
+    text-align: center;
+}
+
+.project-tile:hover a {
+    text-decoration: underline;
+}
+
+/* .project-tile:hover a::before {
+    display: inline-block;
+    content: "< ";
+    width: 25px;
+}
+
+.project-tile:hover a::after {
+    display: inline-block;
+    text-align: right;
+    content: " />";
+    width: 25px;
+} */
+
+.project-content > a {
+    font-size: 1.4rem;
+    padding: 0.5rem 1.5rem;
+    border-radius: 0;
+    border: none;
+    color: inherit;
+    background: #393e46;
+    border: 2px solid #222831;
+    transition: background 500ms;
+    cursor: pointer;
+    text-decoration: none;
+}
+
+.project-content > a:hover {
+    background: #222831;
+    opacity: 0.75;
+}
+
+.project-content > a:hover::after {
+    display: inline-block;
+    text-align: right;
+    content: " >";
+    width: 22px;
+}
+
+@media screen and (max-width: 650px) {
+    .project-content > div {
+      grid-template-columns: 1fr;
+    }
 }
 
 /* Contact */
@@ -118,24 +227,60 @@ html {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    text-align: center;
     width: 100%;
     height: 100vh;
     background-color: rgb(109, 152, 232);
+    color: azure;
 }
 
-#contact a:link {
-    color: azure;
-    text-decoration: none;
-    font-size: 50px;
+#contact p {
+    font-size: 30px;
     font-weight: 700;
 }
 
-#contact a:hover {
-    text-decoration: underline;
+.social-icons {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    max-width: 980px;
+    margin-top: 4rem;
+    flex-wrap: wrap;
+}
+
+.social-icons a {
+    display: inline-block;
+    text-decoration: none;
+    font-size: 24px;
+    font-weight: 600;
+    color: azure;
+    margin: 1rem 2rem;
+    transition: transform .5s;
+}
+  
+.social-icons a:hover {
+    transform: translateY(-5px);
 }
 
 #contact a:visited, a:active {
     color: azure;
+}
+
+/* Media Query */
+
+footer {
+    width: 100%;
+    padding: 20px 15px;
+    background-color: rgb(109, 152, 232);
+    position: relative;
+    bottom: 0;
+}
+
+footer p {
+    display: flex;
+    justify-content: flex-start;
+    color: azure;
+    font-weight: bold;
 }
 
 /* Media Query */
